# Malky

./: .gitignore  meson.build
skins/default/: skin.ini
src/: main.c  meson.build
src/core/: app.c  app.h  config.c  config.h  context_menu.c  context_menu.h  dialog.c  dialog.h  dragdrop.c  dragdrop.h  event.c  event.h  installer.c  installer.h  movement.c  movement.h  pet.c  pet.h  plugin.c  plugin.h  skin.c  skin.h  window.c  window.h
src/plugins/: meson.build
src/plugins/pdf/: meson.build  pdf_plugin.c
src/plugins/sdk/: plugin_api.h
src/plugins/youtube/: meson.build  youtube_plugin.c
